5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1723_2503.log
== TEST (2019-05-13 23:08:03) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/2*i + 1)*((-1)**i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- OUTPUT:
-136.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:08:25) 
-- CODE:
n = int(input("digite n: "))

soma = 4
i = 0 

while(n>0):
	soma = soma + (4/2*i + 1)*((-1)**i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- OUTPUT:
-132.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:08:41) 
-- CODE:
n = int(input("digite n: "))

soma = 3
i = 0 

while(n>0):
	soma = soma + (4/2*i + 1)*((-1)**i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- OUTPUT:
-133.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:08:44) 
-- CODE:
n = int(input("digite n: "))

soma = 3
i = 0 

while(n>0):
	soma = soma + (4/2*i + 1)*((-1)**i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- OUTPUT:
-133.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:09:07) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/2*i + 1)*((-1)**i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- OUTPUT:
-136.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:09:36) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i) + 1)*((-1)**i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + (4/(2*i) + 1)*((-1)**i)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:10:11) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + ((4/(2*i) + 1))*((-1)**i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + ((4/(2*i) + 1))*((-1)**i)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:10:26) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + ((4/(2*i + 1))*((-1)**i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:10:40) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i + 1))*((-1)**i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:10:44) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i + 1))*((-1)**i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 23:10:48) 
-- CODE:
n = int(input("digite n: "))

soma = 0
i = 0 

while(n>0):
	soma = soma + (4/(2*i + 1))*((-1)**i)
	i = i + 1
	n = n - 1
print(round(soma,8))
-- EXECUTION TIME:
0.139739
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
